@@ -270,4 +270,5 @@ $Id$
 * First pass clean-up of unused scripts in /scripts
 * Clean of unused extensions (SimpleReplicator, Updater and UserClassEx)
 * Added 'isExtensionRegistered' & 'configureExtension' & 'getVersion' methods to [[Extension:StubManager]]
+* Moved logo related files to /logo directory
 * 
